methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:10: error: '(' expected but identifier found.
                               while !isOverBaggle() {while (!test) {right(); forward()}; forward()}
                                     ^SlugHunting:12: error: illegal start of simple expression
}
^