methods.slug.SlugHunting.scala.code




def hunt() {
def isFacingTrail():Boolean = {if (isFacingWall()) {return false}
                                   else {forward(); if (getGroundColor()==Color.green) {backward(); return true} else {backward(); return false}}  
var test:Boolean=true
                               while !isOverBaggle() {while (!test) {right(); forward()}; forward()}
    // Write your code here
}

}